<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:text="@string/mydashboard"
        android:background="@color/yellow"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="47sp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">


        <android.support.v7.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@color/yellow"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:focusable="true">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cirleyello"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:padding="10dp"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    android:focusable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/profile"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@color/yellow"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:focusable="true">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlered"
                    android:contentDescription="@string/todo"
                    android:padding="10dp"
                    android:src="@drawable/ic_storage_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/courses"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@color/yellow"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlegree"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:padding="10dp"
                    android:src="@drawable/ic_battery_charging_30_black_24dp"
                    android:focusable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/attendance"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@color/yellow"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circleorange"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_speaker_notes_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/notes"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@color/yellow"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cicleblue"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_touch_app_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/doubts"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:background="@color/yellow"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlepap"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_people_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/friends"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>





